fix depercated APIs

--- a/samples/PushNotificationSample.iOS/PushNotificationSample.iOS.csproj
+++ b/samples/PushNotificationSample.iOS/PushNotificationSample.iOS.csproj
@@ -153,8 +153,8 @@
         <Reference Include="Xamarin.iOS" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="Plugin.PushNotification" Version="3.4.3" />
-        <PackageReference Include="Xamarin.Forms" Version="4.8.0.1821" />
+        <PackageReference Include="Plugin.PushNotification" Version="3.*" />
+        <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\PushNotificationSample\PushNotificationSample.csproj">
