--- a/samples/PushNotificationSample.Android/PushNotificationSample.Android.csproj
+++ b/samples/PushNotificationSample.Android/PushNotificationSample.Android.csproj
@@ -17,7 +17,7 @@
         <AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>
         <MonoAndroidResourcePrefix>Resources</MonoAndroidResourcePrefix>
         <MonoAndroidAssetsPrefix>Assets</MonoAndroidAssetsPrefix>
-        <TargetFrameworkVersion>v10.0</TargetFrameworkVersion>
+        <TargetFrameworkVersion>v11.0</TargetFrameworkVersion>
         <AndroidEnableSGenConcurrent>true</AndroidEnableSGenConcurrent>
         <AndroidHttpClientHandlerType>Xamarin.Android.Net.AndroidClientHandler</AndroidHttpClientHandlerType>
         <NuGetPackageImportStamp>
@@ -55,18 +55,18 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="Plugin.PushNotification" Version="3.4.3" />
+        <PackageReference Include="Plugin.PushNotification" Version="3.*" />
         <PackageReference Include="Xamarin.AndroidX.AppCompat" Version="1.2.0.6" />
         <PackageReference Include="Xamarin.AndroidX.Browser" Version="1.3.0.4" />
         <PackageReference Include="Xamarin.AndroidX.CardView" Version="1.0.0.6" />
         <PackageReference Include="Xamarin.AndroidX.Legacy.Support.V4" Version="1.0.0.6" />
         <PackageReference Include="Xamarin.AndroidX.Legacy.Support.Core.Utils" Version="1.0.0.6" />
         <PackageReference Include="Xamarin.AndroidX.Lifecycle.LiveData" Version="2.2.0.4" />
-        <PackageReference Include="Xamarin.AndroidX.MediaRouter" Version="1.2.0.1" />
+        <PackageReference Include="Xamarin.AndroidX.MediaRouter" Version="1.2.1" />
         <PackageReference Include="Xamarin.AndroidX.Migration" Version="1.0.8" />
         <PackageReference Include="Xamarin.AndroidX.ViewPager" Version="1.0.0.6" />
         <PackageReference Include="Xamarin.Firebase.Messaging" Version="121.0.1" />
-        <PackageReference Include="Xamarin.Forms" Version="4.8.0.1821" />
+        <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
         <PackageReference Include="Xamarin.Google.Android.Material" Version="1.2.1.1" />
         <PackageReference Include="Xamarin.GooglePlayServices.Basement" Version="117.5.0" />
     </ItemGroup>
@@ -99,18 +99,8 @@
         <AndroidResource Include="Resources\mipmap-xxhdpi\launcher_foreground.png" />
         <AndroidResource Include="Resources\mipmap-xxxhdpi\Icon.png" />
         <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
-        <AndroidResource Include="Resources\drawable-xhdpi\android.png">
-            <SubType>
-            </SubType>
-            <Generator>
-            </Generator>
-        </AndroidResource>
-        <AndroidResource Include="Resources\drawable-hdpi\android.png">
-            <SubType>
-            </SubType>
-            <Generator>
-            </Generator>
-        </AndroidResource>
+        <AndroidResource Include="Resources\drawable-xhdpi\android.png" />
+        <AndroidResource Include="Resources\drawable-hdpi\android.png" />
     </ItemGroup>
     <ItemGroup>
         <Folder Include="Resources\drawable-hdpi\" />
