--- a/samples/PushNotificationSample.iOS/PushNotificationSample.iOS.csproj
+++ b/samples/PushNotificationSample.iOS/PushNotificationSample.iOS.csproj
@@ -52,6 +52,10 @@
         <MtouchDebug>true</MtouchDebug>
         <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
         <BuildIpa>true</BuildIpa>
+        <MtouchFastDev>true</MtouchFastDev>
+        <MtouchEnableSGenConc>true</MtouchEnableSGenConc>
+        <MtouchInterpreter>-all</MtouchInterpreter>
+        <MtouchLink>None</MtouchLink>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
         <DebugType>none</DebugType>
@@ -63,6 +67,7 @@
         <ConsolePause>false</ConsolePause>
         <CodesignKey>iPhone Developer</CodesignKey>
         <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
+        <MtouchLink>SdkOnly</MtouchLink>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Ad-Hoc|iPhone' ">
         <DebugType>none</DebugType>
@@ -76,6 +81,7 @@
         <CodesignProvision>Automatic:AdHoc</CodesignProvision>
         <CodesignKey>iPhone Distribution</CodesignKey>
         <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
+        <MtouchLink>SdkOnly</MtouchLink>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'AppStore|iPhone' ">
         <DebugType>none</DebugType>
@@ -88,6 +94,7 @@
         <CodesignProvision>Automatic:AppStore</CodesignProvision>
         <CodesignKey>iPhone Distribution</CodesignKey>
         <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
+        <MtouchLink>SdkOnly</MtouchLink>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(RunConfiguration)' == 'Default' ">
         <AppExtensionDebugBundleId />
