--- a/samples/PushNotificationSample.Android/PushNotificationSample.Android.csproj
+++ b/samples/PushNotificationSample.Android/PushNotificationSample.Android.csproj
@@ -55,7 +55,6 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="Plugin.PushNotification" Version="3.*" />
         <PackageReference Include="Xamarin.AndroidX.AppCompat" Version="1.2.0.7" />
         <PackageReference Include="Xamarin.AndroidX.Browser" Version="1.3.0.5" />
         <PackageReference Include="Xamarin.AndroidX.CardView" Version="1.0.0.8" />
@@ -112,6 +111,10 @@
         <ProjectReference Include="..\PushNotificationSample\PushNotificationSample.csproj">
             <Project>{0d84321d-bcac-4306-a0df-0bfc26db4895}</Project>
             <Name>PushNotificationSample</Name>
+        </ProjectReference>
+        <ProjectReference Include="..\..\src\Plugin.PushNotification\Plugin.PushNotification.csproj">
+          <Project>{EE1AC6F0-A47F-43F1-AC20-41DE8E5DB057}</Project>
+          <Name>Plugin.PushNotification</Name>
         </ProjectReference>
     </ItemGroup>
     <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
